fireflies and secure network overlay work (#71)
* add default exception handler to show any nasty ones in the background

* Merge branch 'master' into strapping

* Refactor Fireflies for signing sanity ;)

Create a NULL_SIGNATURE for dealing with... null signatures used in
fireflies.

* reenable mtls testing for FF. seggregate the cert/key from member's

* interim

* dynamic context ring support

* Some fireflies clean up. provide constructor for member implementations

add a fireflies test skeleton for further integration work

* clean up certification provisioning/validation in stereotomy

Fireflies view booted from stereotomy provisioned certs.

* linkage of Context membership states

As "Bob" foretold

* extract Context interface from implementation

Geebus.  Not like it's the foundation of everything...

* moar clean up on context

* Clean up Fireflies

long due

* logging levels

* other cases

* link handling